--- a/app/styles/blue.scss
+++ b/app/styles/blue.scss
@@ -45,19 +45,21 @@
     bottom: 10px;
     position: absolute;
     width: 220px;
-}
-
-#buttons input {
-    background-color: #99deff;
-    border-radius:5px;
-    border: none;
-    font-size: 12px;
-    width: 100%;
-    color: #000;
-}
-
-#buttons input:hover {
-    color: #fff;
+    input{
+      background-color: #99deff;
+      border-radius:5px;
+      border: none;
+      font-size: 12px;
+      width: 100%;
+      color: #000;
+      &[disabled]{
+        color: grey;
+        background-color: lightsteelblue;
+      }
+      &:hover:not([disabled]){
+        color: #fff;
+      }
+    }
 }
 
 #generatedCode {
