--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
 <h3> Twitter widget </h3>
 <div class="section">
-    <div ng-include="'views/skins/blue.html'" ng-click="configureSkin()"></div>
+    <div ng-include="'views/skins/blue.html'" ng-click=""></div>
 </div>
