--- a/app/styles/blue.scss
+++ b/app/styles/blue.scss
@@ -32,33 +32,32 @@
 .detailBox {
     margin-bottom: 15px;
     width: 180px;
-}
-
-.detailBox input {
-    width: 200px;
-    border: none;
-    border-radius:5px;
-    margin-top: 5px;
+    input {
+      width: 200px;
+      border: none;
+      border-radius:5px;
+      margin-top: 5px;
+    }
 }
 
 #buttons {
     bottom: 10px;
     position: absolute;
     width: 220px;
-    input{
-      background-color: #99deff;
-      border-radius:5px;
-      border: none;
-      font-size: 12px;
-      width: 100%;
-      color: #000;
-      &[disabled]{
-        color: grey;
-        background-color: lightsteelblue;
-      }
-      &:hover:not([disabled]){
-        color: #fff;
-      }
+    input {
+        background-color: #99deff;
+        border-radius:5px;
+        border: none;
+        font-size: 12px;
+        width: 100%;
+        color: #000;
+        &[disabled]{
+          color: grey;
+          background-color: lightsteelblue;
+        }
+        &:hover:not([disabled]){
+          color: #fff;
+        }
     }
 }
 
@@ -72,33 +71,64 @@
     top: 100px;
     left: 140px;
     box-shadow: 0px 0px 20px #000;
+    textarea {
+        background-color: transparent;
+        border-radius:5px;
+        border: none;
+        box-shadow: none;
+        width: 280px;
+        height: 100%;
+        text-align: center;
+        color: #fff;
+        overflow: hidden;
+        padding-top: 20px;
+    }
+    #closeBtn {
+        background-color: #52a7ff;
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        color: #fff;
+        border-radius: 10px;
+        width: 20px;
+        height: 20px;
+        font-size: 12px;
+        font-weight: bold;
+        text-align: center;
+        box-shadow: none;
+        border: none;
+    }
 }
 
-#generatedCode #code {
-    background-color: transparent;
-    border-radius:5px;
-    border: none;
-    box-shadow: none;
-    width: 280px;
-    height: 100%;
-    text-align: center;
-    color: #fff;
-    overflow: hidden;
-    padding-top: 20px;
-}
-
-#generatedCode #closeBtn {
-    background-color: #52a7ff;
+#userForm {
+  width: 400px;
+  height: 400px;
+  background-color: #C7C7C7;
+  position: absolute;
+  top: 100px;
+  right: 10px;
+  border-radius:5px;
+  .userFormField {
+    position: relative;
+    left: 30px;
+    padding-bottom: 5px;
+    width: 180px;
+  }
+  textarea {
+    width: 300px;
+  }
+  #template {
+    height: 170px;
+  }
+  #fieldNames {
+    height: 50px;
+  }
+  h3 {
+    padding-left: 15px;
+  }
+  #sendBtn {
     position: absolute;
-    top: 5px;
-    right: 5px;
-    color: #fff;
-    border-radius: 10px;
-    width: 20px;
-    height: 20px;
-    font-size: 12px;
-    font-weight: bold;
-    text-align: center;
-    box-shadow: none;
-    border: none;
+    bottom: 10px;
+    right: 10px;
+  }
 }
