--- a/app/views/skins/blue.html
+++ b/app/views/skins/blue.html
@@ -1,30 +1,16 @@
-<div>
+<div id="templateContainer"></div>
 
-    <div id="blueSkin">
-        <div id="form">
-            <div class="detailBox">
-                Account name:
-                <input ng-model="skinConfiguration.twitterAccount"/>
-            </div>
-
-            <div class="detailBox">
-                Widget ID:
-                <input ng-model="skinConfiguration.widgetId" ng-change="generatePreview()"/>
-            </div>
-
-            <div id="buttons">
-                <input type="button" id="codeBtn" value="Get code" ng-click="showCode = true" ng-disabled="!skinConfiguration.widgetId"/>
-            </div>
-        </div>
-
-
-        <iframe id="preview"
-                ng-src="/views/skins/twitter.html?widgetId={{skinConfiguration.widgetId}}&twitterAccount={{skinConfiguration.twitterAccount}}"
-                scrolling="no"></iframe>
-
-        <div id="generatedCode" ng-show="!!showCode">
-            <input type="button" id="closeBtn" value="X" ng-click="showCode = false"/>
-            <div get-html target-id="preview" value-holder="skinConfiguration"></div>
-        </div>
+<div id="userForm">
+    <h3> User data </h3>
+    <div class="userFormField">
+        Template code:
+        <textarea ng-model="template" id="template"></textarea>
     </div>
+
+    <div class="userFormField">
+        Field names:
+        <textarea ng-model="fieldNames" id="fieldNames"></textarea>
+    </div>
+
+    <input type="button" id="sendBtn" value="Send data" onclick="saveUserData()"/>
 </div>
