template field is now binded

--- a/app/views/skins/blue.html
+++ b/app/views/skins/blue.html
@@ -1,10 +1,10 @@
-<div id="templateContainer"></div>
+<div get-template id="templateContainer" template="{{template}}"></div>
 
 <div id="userForm">
     <h3> User data </h3>
     <div class="userFormField">
         Template code:
-        <textarea ng-model="template" id="template"></textarea>
+        <textarea id="template" ng-model="template"></textarea>
     </div>
 
     <div class="userFormField">
