--- a/app/views/skins/widget.html
+++ b/app/views/skins/widget.html
@@ -1,7 +1,7 @@
 <div get-template id="templateContainer" template="{{template}}"></div>
 
 <div id="userForm">
-    <h3> User data </h3>
+    <h3> Widget configuration </h3>
     <div class="userFormField">
         Template code:
         <textarea id="template" ng-model="template"></textarea>
@@ -11,6 +11,4 @@
         Field names:
         <textarea ng-model="fieldNames" id="fieldNames"></textarea>
     </div>
-
-    <input type="button" id="sendBtn" value="Send data" onclick="saveUserData()"/>
 </div>
