--- a/app/styles/widget.scss
+++ b/app/styles/widget.scss
@@ -1,5 +1,5 @@
-#blueSkin {
-    background-color: #3b53c0;
+#twitterWidget {
+    //background-color: #3b53c0;
     width: 580px;
     height: 400px;
     overflow:hidden;
@@ -21,8 +21,7 @@
 #configuration {
     width: 230px;
     height: 325px;
-    background-color: #fff;
-    opacity: 0.7;
+    background-color: rgba(247, 247, 247, 0.6);
     border: none;
     top: 120px;
     left: 230px;
@@ -44,7 +43,7 @@
         position: absolute;
         width: 220px;
         input {
-            background-color: #99deff;
+            background-color: #fff;
             border-radius:5px;
             border: none;
             font-size: 12px;
@@ -52,10 +51,10 @@
             color: #000;
             &[disabled]{
                 color: grey;
-                background-color: lightsteelblue;
+                opacity: 0.6;
             }
             &:hover:not([disabled]){
-                color: #fff;
+                opacity: 1;
             }
         }
     }
@@ -64,13 +63,13 @@
 #generatedCode {
     width: 300px;
     height: 200px;
-    background-color: #0402a6;
     border-radius:5px;
     opacity: 0.9;
     position: absolute;
     top: 100px;
     left: 140px;
     box-shadow: 0px 0px 20px #000;
+    z-index: 999;
     textarea {
         background-color: transparent;
         border-radius:5px;
@@ -84,12 +83,10 @@
         padding-top: 20px;
     }
     #closeBtn {
-        background-color: #52a7ff;
         position: absolute;
         top: 5px;
         right: 5px;
         color: #fff;
-        border-radius: 10px;
         width: 20px;
         height: 20px;
         font-size: 12px;
