--- a/app/styles/widget.scss
+++ b/app/styles/widget.scss
@@ -69,6 +69,7 @@
     top: 100px;
     left: 140px;
     box-shadow: 0px 0px 20px #000;
+    background-color: #fff;
     z-index: 999;
     textarea {
         background-color: transparent;
@@ -78,15 +79,18 @@
         width: 280px;
         height: 100%;
         text-align: center;
-        color: #fff;
+        color: #000;
         overflow: hidden;
         padding-top: 20px;
     }
     #closeBtn {
+        background-color: #000;
+        opacity: 0.7;
         position: absolute;
         top: 5px;
         right: 5px;
         color: #fff;
+        border-radius: 10px;
         width: 20px;
         height: 20px;
         font-size: 12px;
