--- a/app/styles/widget.scss
+++ b/app/styles/widget.scss
@@ -1,5 +1,5 @@
 #twitterWidget {
-    //background-color: #3b53c0;
+    background-color: lightgrey;
     width: 580px;
     height: 400px;
     overflow:hidden;
