--- a/app/views/skins/widget.html
+++ b/app/views/skins/widget.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="userFormField">
-        Field names:
+        Field names {control, name, label, [type, options{name}]}:
         <textarea ng-model="fieldNames" id="fieldNames"></textarea>
     </div>
 </div>
