--- a/app/styles/widget.scss
+++ b/app/styles/widget.scss
@@ -1,30 +1,48 @@
+html, body {
+  background-color: #eaeaea;
+}
+
+#header {
+  background-image: url(http://www.tricode.nl/wp-content/uploads/2010/07/gigaspaces1.png);
+  background-repeat: no-repeat;
+  background-position: 0;
+  height: 40px;
+}
+
+#configContainer {
+  border-radius: 10px;
+  background-color: #fff;
+  height: 540px;
+  padding: 20px;
+}
+
 #twitterWidget {
     background-color: lightgrey;
-    width: 580px;
-    height: 400px;
-    overflow:hidden;
-    float:left;
-    position:relative;
+    width: 545px;
+    height: 540px;
+    overflow: hidden;
+    float: left;
+    position: relative;
     border-radius: 5px;
+    left: 360px;
 }
 
 #preview {
-    width: 300px;
-    height: 350px;
-    left: 270px;
-    top: 20px;
+    width: 325px;
+    height: 530px;
+    left: 220px;
     position: absolute;
     border: none;
     overflow: hidden;
 }
 
 #configuration {
-    width: 230px;
-    height: 325px;
+    width: 200px;
+    height: 490px;
     background-color: rgba(247, 247, 247, 0.6);
     border: none;
-    top: 120px;
-    left: 230px;
+    top: 70px;
+    left: 600px;
     position: absolute;
     padding: 30px 0 0 10px;
     border-radius: 5px;
@@ -32,16 +50,19 @@
         margin-bottom: 15px;
         width: 180px;
         input {
-            width: 200px;
+            width: 180px;
             border: none;
             border-radius:5px;
             margin-top: 5px;
         }
+      select {
+        width: 190px;
+      }
     }
     #buttons {
         bottom: 10px;
         position: absolute;
-        width: 220px;
+        width: 190px;
         input {
             background-color: #fff;
             border-radius:5px;
@@ -102,30 +123,32 @@
 }
 
 #userForm {
-  width: 450px;
-  height: 400px;
-  background-color: #C7C7C7;
+  width: 350px;
+  height: 540px;
+  background-color: #eaeaea;
   position: absolute;
-  top: 100px;
-  right: 10px;
   border-radius:5px;
   .userFormField {
     position: relative;
-    left: 30px;
+    left: 15px;
     padding-bottom: 5px;
-    width: 400px;
+    width: 300px;
   }
   textarea {
-    width: 380px;
+    width: 300px;
   }
   #template {
-    height: 170px;
+    height: 230px;
   }
   #fieldNames {
-    height: 50px;
+    height: 150px;
   }
   h3 {
+    color: #434343;
+    font-size: 18px;
+    font-weight: bold;
     padding-left: 15px;
+    line-height: 30px;
   }
   #sendBtn {
     position: absolute;
