--- a/app/views/skins/twitter.html
+++ b/app/views/skins/twitter.html
@@ -7,7 +7,7 @@
             var widgetId = window.location.search.substring(1).split('&')[0].split('=')[1];
             var twitterAccount = window.location.search.substring(1).split('&')[1].split('=')[1];
 
-            $('<a class="twitter-timeline" ng-href="https://twitter.com/{{twitterAccount}}" data-widget-id="{{widgetId}}" height="340"></a>'
+            $('<a class="twitter-timeline" ng-href="https://twitter.com/{{twitterAccount}}" data-widget-id="{{widgetId}}" height="520" width="320"></a>'
                     .replace("{{twitterAccount}}", twitterAccount)
                     .replace("{{widgetId}}", widgetId)
             ).appendTo("body");
