--- a/app/views/skins/widget.html
+++ b/app/views/skins/widget.html
@@ -1,4 +1,4 @@
-<div id="header"></div>
+<a href="/" ><div id="header"></div></a>
 <div id="configContainer">
     <div get-template id="templateContainer" template="{{template}}"></div>
 
@@ -14,5 +14,7 @@
             {control, name, label, [type, options{name}]}
             <textarea ng-model="fieldNames" id="fieldNames"></textarea>
         </div>
+
+        <input type="button" value="Save" id="saveButton" ng-click="saveTemplate();"/>
     </div>
 </div>
