--- a/app/views/portal.html
+++ b/app/views/portal.html
@@ -6,7 +6,7 @@
             <li class="skinItem" ng-repeat="skin in skins.skins">
                 <a ng-href="#/widget/{{skin.name}}">
                     <div id="skinImg">
-                        <img ng-src="{{skin.img}}" />
+                        <img ng-src="{{skin.thumb}}" />
                     </div>
                     <div id="skinName">{{skin.name}}</div>
                     <div id="skinDesc">{{skin.description}}</div>
