Skin portal development

--- a/app/styles/widget.scss
+++ b/app/styles/widget.scss
@@ -158,6 +158,9 @@ html, body {
     padding-left: 15px;
     line-height: 30px;
   }
+  #buttons {
+    margin-left: 10px;
+  }
   #sendBtn {
     position: absolute;
     bottom: 10px;
